# uno-game

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/entity/: user.rs
server/src/protocol/: server.rs
server/src/service/: user_service.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/payload/: handshake.rs
shared/src/protocol/: metadata.rs  rpc.rs
