[package]
edition = "2021"
name = "uno-game-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
# jsonrpc-core = "18.0.0"
jsonrpc-core-client = {version = "18.0.0", features = ["http", "tls"]}
uno-game-shared = {version = "0.1.0", path = "../shared"}
