[package]
edition = "2021"
name = "uno-game-shared"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
